# TypePilot

./: .gitignore  IDEA.md  requirements.txt
actors/: __init__.py
actors/audio/: __init__.py
actors/hotkey/: __init__.py
actors/injection/: __init__.py
actors/overlay/: __init__.py
actors/transcript_assembler/: __init__.py
actors/whisper/: __init__.py
actors/window_assembler/: __init__.py
app/: main.py
config/: app.yaml
core/actor/: __init__.py
core/config/: __init__.py
core/events/: __init__.py  bus.py
core/logging/: __init__.py
core/platform/: __init__.py
core/state_machine/: __init__.py  states.py
native/windows/: Cargo.toml
native/windows/src/: audio.rs  hotkeys.rs  injection.rs  lib.rs
tests/: test_foundation.py
tests/integration/: test_pipeline.py
tests/stress/: test_stability.py
tests/unit/actors/: test_audio.py  test_hotkey.py  test_injection.py  test_overlay.py  test_transcript_assembler.py  test_whisper.py  test_window_assembler.py
tests/unit/core/: test_actor.py  test_config.py  test_event_bus.py  test_logging.py  test_platform.py  test_state_machine.py
ui/: __init__.py  overlay.py
