[package]
name = "typepilot_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "typepilot_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
cpal = "0.15"
crossbeam-channel = "0.5"
once_cell = "1.18"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
]
